syntax = "proto3";
package poktroll.proof;

option go_package = "github.com/pokt-network/poktroll/x/proof/types";

message Proof {
  string index = 1; 
  string supplierAddress = 2; 
  string sessionHeader = 3; 
  string closestMerkleProof = 4; 
  
}

